[package]
name = "rlsf"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
license = "MIT/Apache-2.0"
edition = "2018"
autobenches = false

[dependencies]
svgbobdoc = { version = "0.2.2" }

[dev-dependencies]
# TDOO: the following deps need `std`, which prevents the use of FarCri.rs
# quickcheck_macros = "0.9.1"
# quickcheck = "0.9.2"
# env_logger = "0.7.1"
log = "0.4.8"
linked_list_allocator = "0.8.11"
buddy-alloc = "0.4.1"
wee_alloc = { version = "0.4.5", features = ["static_array_backend"] }
dlmalloc = { version = "0.2.1" }

[dev-dependencies.farcri]
git = "https://github.com/yvt/farcri-rs.git"
rev = "dbd6544d0411b8751871a6315ba4d8a08ca52d07"

[[bench]]
name = "stress"
harness = false

[[bench]]
name = "stress_wee"
harness = false
