[package]
name = "rlsf"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
description = "Real-time dynamic memory allocator based on the TLSF algorithm"
categories = ["embedded", "no-std", "wasm", "memory-management", "web-programming"]
repository = "https://github.com/yvt/rlsf"

[features]
doc_cfg = []
std = []

[dependencies]
svgbobdoc = { version = "0.2.2" }

[dev-dependencies]
quickcheck_macros = "0.9.1"
quickcheck = "0.9.2"
env_logger = "0.7.1"
log = "0.4.8"

[package.metadata.docs.rs]
all-features = true
