[package]
name = "rlsf_benchmark_farcri"
edition = "2018"
version = "0.0.0"
license = "MIT/Apache-2.0"
publish = false
autobenches = false

[dev-dependencies]
rlsf = { path = "../rlsf" }
log = "0.4.8"
linked_list_allocator = "0.8.11"
buddy-alloc = "0.4.1"
wee_alloc = { version = "0.4.5", features = ["static_array_backend"] }
dlmalloc = { version = "0.2.1" }
umm-malloc-sys = "0.1.1"

[dev-dependencies.farcri]
git = "https://github.com/yvt/farcri-rs.git"
rev = "dbd6544d0411b8751871a6315ba4d8a08ca52d07"

[[bench]]
name = "stress"
harness = false

[[bench]]
name = "stress_wee"
harness = false
